fix: assign z-index to feedback star assign index in response to the issue observed on physical device where star is obscured by grid cards

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -436,6 +436,7 @@ visibility: hidden;
     animation-name: feedback-zoom;
     animation-duration: 1.5s;
     animation-fill-mode: forwards;
+    z-index: 3;
 }
 @keyframes feedback-zoom {
     from {
